Updated UltiTools API integration and added ExampleCommand
The UltiTools plugin connection class is updated with a new constructor and the UltiTools-API dependency to the pom.xml file is added. A new class, ExampleCommand, for testing commands is created for the plugin. The UltiKitsExample class now initializes and registers a new UltiToolsConnector instance on plugin enable and unregisters it on plugin disable.

--- a/pom.xml
+++ b/pom.xml
@@ -67,5 +67,11 @@
           <version>1.20.4-R0.1-SNAPSHOT</version>
           <scope>provided</scope>
       </dependency>
+      <dependency>
+          <groupId>com.ultikits</groupId>
+          <artifactId>UltiTools-API</artifactId>
+          <version>6.0.0.202312150106</version>
+          <scope>provided</scope>
+      </dependency>
   </dependencies>
 </project>
